app/scripts/task-list/_task-list-d.scss
task-list {

}

.task-list {
  min-height: 50px;
  list-style: none;
  // add a little padding to top and bottom, to make drag dropping easier
  padding: 5px 0;
  margin: 0;
  display: block;

  .as-sortable-placeholder,
  .dndPlaceholder {
    margin: 1px 2px 5px 1px;
    display: block;
    min-height: 22px;
    background-color: #ddd;
    body.dark-theme & {
      background-color: $dark-theme-bg-darker;
    }
  }
  &__backlog {
  }
}

.task {
  padding: 4px 15px;
  display: block;
  margin-bottom: 6px;
  background-color: #fff;
  color: #333;
  body.dark-theme & {
    background-color: $dark-theme-bg-lighter;
    color: #fff;
  }

  &.as-sortable-dragging,
  &:focus {
    background: #eee;
    color: #000;
    body.dark-theme & {
      background-color: $dark-theme-bg-darker;
      color: #fff;
    }
  }

  .first-line {
    display: flex;
    flex-wrap: nowrap;

    // Button Stuff
    ng-md-icon {
      fill: gray;
    }
    md-checkbox {
      margin-bottom: 0;
      margin-left: 10px;
    }
    .md-button,
    md-checkbox {
      transition: 300ms;
      padding: 4px;
      // always reserve space for buttons
      min-width: 32px;
      width: 32px;
      &:hover {
        transform: scale(1.4);
      }
    }

    .update-icon {
      fill: #000;
      body.dark-theme & {
        fill: #fff;
      }
    }
    .md-icon-button {
      margin: 0;
    }
    .md-button {
      &:hover,
      &.is-active {
        > ng-md-icon {
          fill: #000;
          body.dark-theme & {
            fill: #fff;
          }
        }
      }
    }
  }

  .controls {
    white-space: nowrap;
  }

  &.is-done {
    .title {
      text-decoration: line-through;
    }
  }

  ng-md-icon.delete-icon {
    fill: $red !important;
    body.dark-theme & {
      fill: $red !important;
    }
  }

  &.is-current {
    background: $light-green;
    color: #000;

    body.dark-theme & {
      background-color: $dark-green;
      color: #fff;
    }

    .md-bar {
      background-color: $green !important;
    }
    .play-btn {
      ng-md-icon {
        fill: #000 !important;
        body.dark-theme & {
          fill: #fff !important;
        }
      }
    }
  }
  .md-bar {
    background-color: #ccc !important;
  }

  //md-checkbox.md-checked .md-icon {
  //  background-color: $green;
  //  body.dark-theme & {
  //    background-color: $green;
  //  }
  //}

  md-progress-linear.md-default-theme .md-container,
  md-progress-linear .md-container {
    background: none;
  }

  .handle {
    margin-right: 10px;
  }

  .title {
    text-align: left;
    cursor: pointer;
    outline: none;
    .text {
      outline: none;
      display: block;
      width: 100%;
      min-height: 14px;
    }
  }

  form {
    width: 100%;
  }
  input {
    outline: none;
  }
  input {
    width: 100%;
    display: block;
    box-sizing: border-box;
    height: 30px;
    padding: 4px 10px;
    border: none;
  }

  .time {
    white-space: nowrap;
    font-size: 14px;
    margin-left: 10px;
  }

  .notes {
    width: 100%;
    flex: 0 1 100%;

    section {
      margin-top: 10px;
    }

    .md-caption {
      font-weight: bold;
      margin-bottom: 6px;
    }

    // animation
    &.ng-enter,
    &.ng-leave {
      transition: all 0.3s ease-in-out;
    }

    &.ng-enter {
      opacity: 0;
      max-height: 0;
    }

    &.ng-enter.ng-enter-active,
    &.ng-leave {
      opacity: 1;
      max-height: 600px;
    }

    &.ng-leave.ng-leave-active {
      max-height: 0;
      opacity: 1;
    }
  }

  a {
    cursor: pointer;
  }

  .status {
    margin-bottom: 10px;
  }
  .comments,
  .attachments {
    overflow: hidden;
    text-overflow: ellipsis;
    padding: 0;
    margin: 0 0 10px;
    li {
      padding: 0;
      font-size: 14px;
      margin-top: 5px;
    }
  }

  // animations
  transition: 0.3s;

  &.ng-enter {
    opacity: 0;
    transform: scaleY(0);
  }
  &.ng-enter-active {
    opacity: 1;
    transform: scale(1);
  }

  &.ng-leave {
    display: block;
    opacity: 1;
    transform: scale(1);
  }
  &.ng-leave-active {
    display: block;
    opacity: 0;
    transform: scaleX(0);
  }
  //&.ng-move {
  //  transition: 0.1s;
  //  opacity: 0;
  //  transform: scale(0);
  //}
  //&.ng-move-active {
  //  opacity: 1;
  //  transform: scale(1);
  //}
}

